// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setHtmlMetaData for Payload URLs sets standard meta fields sets fields based on the Bound Witness 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <link rel="icon"
          href="/favicon.ico"
    >
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <meta name="theme-color"
          content="#000000"
    >
    <meta name="description"
          content="Own your piece of XYO's Decentralized Digital World!"
    >
    <link rel="apple-touch-icon"
          href="/apple-touch-icon.png"
    >
    <link rel="manifest"
          href="/manifest.json"
    >
    <title>
      XYO 2.1: Bound Witness | 6d7351f818fd9342fc41072a7dcceb57bdff0fe55e2f8e4d28abac13a5320b15
    </title>
    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Lexend+Deca|Rock+Salt|Source+Code+Pro&amp;display=swap"
          rel="stylesheet"
    >
    <meta property="og:url"
          content="https://beta.explore.xyo.network/payload/hash/6d7351f818fd9342fc41072a7dcceb57bdff0fe55e2f8e4d28abac13a5320b15?network=kerplunk"
    >
    <meta property="og:type"
          content="website"
    >
    <meta property="og:title"
          content="XYO 2.1: Bound Witness | 6d7351f818fd9342fc41072a7dcceb57bdff0fe55e2f8e4d28abac13a5320b15"
    >
    <meta property="og:description"
          content="Explore the XYO 2.1 Blockchain"
    >
    <meta property="og:image"
          content="https://explore.xyo.network/meta-image-explore.jpg"
    >
    <meta property="twitter:card"
          content="summary_large_image"
    >
    <meta property="twitter:image"
          content="https://explore.xyo.network/meta-image-explore-twitter.jpg"
    >
    <meta property="twitter:site"
          content="@OfficialXYO"
    >
    <meta property="twitter:creator"
          content="@OfficialXYO"
    >
    <script async
            src="https://www.googletagmanager.com/gtag/js?id=G-795QBPW744"
    >
    </script>
    <script>
      function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "G-795QBPW744")
    </script>
    <style>
      html {
      overflow-y: auto;
      overflow-x: hidden
    }

    #root,
    body {
      height: 100%;
      width: 100%;
      margin: 0;
      padding: 0
    }
    </style>
    <script defer="defer"
            src="/static/js/main.ae7f7033.js"
    >
    </script>
    <link href="/static/css/main.026e3fe6.css"
          rel="stylesheet"
    >
    <meta property="description"
          content="A XYO 2.1 network.xyo.boundwitness payload with the hash 6d7351f818fd9342fc41072a7dcceb57bdff0fe55e2f8e4d28abac13a5320b15."
    >
    <meta property="og:image:secure_url"
          content="https://explore.xyo.network/meta-image-explore-og.jpg"
    >
    <meta property="og:image:url"
          content="https://explore.xyo.network/meta-image-explore-og.jpg"
    >
    <meta property="twitter:title"
          content="XYO 2.1: Bound Witness | 6d7351f818fd9342fc41072a7dcceb57bdff0fe55e2f8e4d28abac13a5320b15"
    >
    <meta property="title"
          content="XYO 2.1: Bound Witness | 6d7351f818fd9342fc41072a7dcceb57bdff0fe55e2f8e4d28abac13a5320b15"
    >
  </head>
  <body style="padding:0;margin:0;overflow-x:hidden">
    <noscript>
      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2TFNXL"
              height="0"
              width="0"
              style="display:none;visibility:hidden"
      >
      </iframe>
    </noscript>
    <noscript>
      You need to enable JavaScript to run this
    app.
    </noscript>
    <div id="root">
    </div>
  </body>
</html>
`;

exports[`setHtmlMetaData for Payload URLs sets standard meta fields sets fields based on the Payload 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <link rel="icon"
          href="/favicon.ico"
    >
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <meta name="theme-color"
          content="#000000"
    >
    <meta name="description"
          content="Own your piece of XYO's Decentralized Digital World!"
    >
    <link rel="apple-touch-icon"
          href="/apple-touch-icon.png"
    >
    <link rel="manifest"
          href="/manifest.json"
    >
    <title>
      XYO 2.1: Payload | 9213d6b605aad8a4b1871fd5d4f9a23355ffb7334b290afae51ead9bda9fa6a3
    </title>
    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Lexend+Deca|Rock+Salt|Source+Code+Pro&amp;display=swap"
          rel="stylesheet"
    >
    <meta property="og:url"
          content="https://beta.explore.xyo.network/payload/hash/9213d6b605aad8a4b1871fd5d4f9a23355ffb7334b290afae51ead9bda9fa6a3?network=kerplunk"
    >
    <meta property="og:type"
          content="website"
    >
    <meta property="og:title"
          content="XYO 2.1: Payload | 9213d6b605aad8a4b1871fd5d4f9a23355ffb7334b290afae51ead9bda9fa6a3"
    >
    <meta property="og:description"
          content="Explore the XYO 2.1 Blockchain"
    >
    <meta property="og:image"
          content="https://explore.xyo.network/meta-image-explore.jpg"
    >
    <meta property="twitter:card"
          content="summary_large_image"
    >
    <meta property="twitter:image"
          content="https://explore.xyo.network/meta-image-explore-twitter.jpg"
    >
    <meta property="twitter:site"
          content="@OfficialXYO"
    >
    <meta property="twitter:creator"
          content="@OfficialXYO"
    >
    <script async
            src="https://www.googletagmanager.com/gtag/js?id=G-795QBPW744"
    >
    </script>
    <script>
      function gtag() { dataLayer.push(arguments) } window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "G-795QBPW744")
    </script>
    <style>
      html {
      overflow-y: auto;
      overflow-x: hidden
    }

    #root,
    body {
      height: 100%;
      width: 100%;
      margin: 0;
      padding: 0
    }
    </style>
    <script defer="defer"
            src="/static/js/main.ae7f7033.js"
    >
    </script>
    <link href="/static/css/main.026e3fe6.css"
          rel="stylesheet"
    >
    <meta property="description"
          content="A XYO 2.1 network.xyo.blockchain.ethereum.gas payload with the hash 9213d6b605aad8a4b1871fd5d4f9a23355ffb7334b290afae51ead9bda9fa6a3."
    >
    <meta property="og:image:secure_url"
          content="https://explore.xyo.network/meta-image-explore-og.jpg"
    >
    <meta property="og:image:url"
          content="https://explore.xyo.network/meta-image-explore-og.jpg"
    >
    <meta property="twitter:title"
          content="XYO 2.1: Payload | 9213d6b605aad8a4b1871fd5d4f9a23355ffb7334b290afae51ead9bda9fa6a3"
    >
    <meta property="title"
          content="XYO 2.1: Payload | 9213d6b605aad8a4b1871fd5d4f9a23355ffb7334b290afae51ead9bda9fa6a3"
    >
  </head>
  <body style="padding:0;margin:0;overflow-x:hidden">
    <noscript>
      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2TFNXL"
              height="0"
              width="0"
              style="display:none;visibility:hidden"
      >
      </iframe>
    </noscript>
    <noscript>
      You need to enable JavaScript to run this
    app.
    </noscript>
    <div id="root">
    </div>
  </body>
</html>
`;
